[package]
name = "fucker"
version = "0.6.0"
edition = "2024"
authors = ["teaearlgraycold <teaearlgraycold@protonmail.com>"]
homepage = "https://github.com/danthedaniel/BF-JIT"
repository = "https://github.com/danthedaniel/BF-JIT"
description = "BrainFuck interpreter and optimizing JIT compiler "
readme = "README.md"
license = "MIT"

[dependencies]
libc = "0.2.172"
docopt = "1.1.1"
serde = "1.0"
serde_derive = "1.0"

[[bin]]
name = "fucker"
doc = false
test = true

[profile.release]
debug = true
