[package]
name = "fucker"
version = "0.6.2"
edition = "2024"
authors = ["teaearlgraycold <teaearlgraycold@protonmail.com>"]
homepage = "https://github.com/danthedaniel/BF-JIT"
repository = "https://github.com/danthedaniel/BF-JIT"
description = "BrainFuck interpreter and optimizing JIT compiler "
readme = "README.md"
license = "MIT"

[features]
jit = []

[dependencies]
docopt = "1.1.1"
serde = "1.0"
serde_derive = "1.0"
anyhow = "1.0"
libc = "0.2.175"

[[bin]]
name = "fucker"
doc = false
test = true

[lints.clippy]
# Enable all clippy lints by default
all = "warn"
# Enable pedantic lints for stricter code quality
pedantic = "warn"
